# chat-analyser

./: .gitignore  CONTRIBUTING.md  main.py  pyproject.toml
.github/workflows/: ci.yml
chat_analyser/: __init__.py  config.py
chat_analyser/api/: main.py  models.py
chat_analyser/core/: __init__.py  analyser.py  utils.py
chat_analyser/core/contexts/: party.md  work.md
tests/: test_api.py  test_core.py
